--- a/checkmate/main/templates/main/register.html
+++ b/checkmate/main/templates/main/register.html
@@ -1,9 +1,10 @@
+{%load static from staticfiles%}
 <!DOCTYPE html>
 <html>
 <head>
 	<title></title>
 
-	<link rel=stylesheet href="style.css" type="text/css">
+	<link rel=stylesheet href="{% static 'main/css/game_style.css' %}" type="text/css">
 
 </head>
 <body>
